<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.rieger.happyhour.view.fragments.changelocation.OpeningFragment">


    <TextView
        android:id="@+id/fragment_opening_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/general_opening_times"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fragment_opening_monday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/fragment_opening_title"
        android:layout_alignStart="@+id/fragment_opening_title" />

    <TextView
        android:id="@+id/fragment_opening_monday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_monday"
        android:layout_alignBottom="@+id/fragment_opening_monday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fragment_opening_wednesday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_wednesday"
        android:layout_alignBottom="@+id/fragment_opening_wednesday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fragment_opening_tuesday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_tuesday"
        android:layout_alignBottom="@+id/fragment_opening_tuesday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fragment_opening_thursday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_thursday"
        android:layout_alignBottom="@+id/fragment_opening_thursday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fragment_opening_friday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_friday"
        android:layout_alignBottom="@+id/fragment_opening_friday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fragment_opening_saturday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_saturday"
        android:layout_alignBottom="@+id/fragment_opening_saturday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/fragment_opening_sunday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/general_day_sunday"
        android:layout_alignBottom="@+id/fragment_opening_sunday_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/fragment_opening_tuesday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_monday_text"
        android:layout_alignLeft="@+id/fragment_opening_monday_text"
        android:layout_alignStart="@+id/fragment_opening_monday_text"
        android:layout_alignRight="@+id/fragment_opening_monday_text"
        android:layout_alignEnd="@+id/fragment_opening_monday_text" />

    <EditText
        android:id="@+id/fragment_opening_wednesday_text"
        android:layout_width="wrap_content"
        android:focusableInTouchMode="false"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_tuesday_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/fragment_opening_tuesday_text"
        android:layout_alignStart="@+id/fragment_opening_tuesday_text" />

    <EditText
        android:id="@+id/fragment_opening_thursday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_wednesday_text"
        android:layout_alignLeft="@+id/fragment_opening_wednesday_text"
        android:layout_alignStart="@+id/fragment_opening_wednesday_text"
        android:layout_alignRight="@+id/fragment_opening_wednesday_text"
        android:layout_alignEnd="@+id/fragment_opening_wednesday_text" />

    <EditText
        android:id="@+id/fragment_opening_friday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_thursday_text"
        android:layout_alignLeft="@+id/fragment_opening_thursday_text"
        android:layout_alignStart="@+id/fragment_opening_thursday_text"
        android:layout_alignRight="@+id/fragment_opening_thursday_text"
        android:layout_alignEnd="@+id/fragment_opening_thursday_text" />

    <EditText
        android:id="@+id/fragment_opening_saturday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_friday_text"
        android:layout_alignLeft="@+id/fragment_opening_friday_text"
        android:layout_alignStart="@+id/fragment_opening_friday_text"
        android:layout_alignRight="@+id/fragment_opening_friday_text"
        android:layout_alignEnd="@+id/fragment_opening_friday_text" />

    <EditText
        android:id="@+id/fragment_opening_sunday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:inputType="time"
        android:ems="10"
        android:layout_below="@+id/fragment_opening_saturday_text"
        android:layout_alignRight="@+id/fragment_opening_saturday_text"
        android:layout_alignEnd="@+id/fragment_opening_saturday_text"
        android:layout_alignLeft="@+id/fragment_opening_saturday_text"
        android:layout_alignStart="@+id/fragment_opening_saturday_text" />
</RelativeLayout>
