<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.rieger.happyhour.view.StartActivity">

    <it.rieger.happyhour.controller.widget.DynamicImageView
        android:id="@+id/start_activity_image"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/launcher"/>

    <TextView
        android:id="@+id/start_activity_welcome_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start_activity_welcome_head"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/start_activity_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/start_activity_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_activity_welcome"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/start_activity_welcome_head"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/start_activity_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anmelden"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/start_activity_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_next"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:visibility="invisible"
        android:id="@+id/start_activity_progressBar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="EMail"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:id="@+id/start_activity_editText_mail" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="Passwort"
            android:visibility="invisible"
            android:id="@+id/start_activity_editText_password" />

    </LinearLayout>

    <Button
        android:id="@+id/start_activity_button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrieren"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:layout_alignBaseline="@+id/start_activity_button_login"
        android:layout_alignBottom="@+id/start_activity_button_login"
        android:layout_toLeftOf="@+id/start_activity_button_login"
        android:layout_toStartOf="@+id/start_activity_button_login" />


</RelativeLayout>
